--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "impl_serde_serialize_error"
 version = "1.0.0"
 edition = "2021"
+description = "Macro for fast implementing error methods in serde::Serializer trait"
 license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
